log
Thu 25 Apr 2024 05:53:56 PM UTC: 
 tests:  0|6
total_score: 0/70
e2575cf
Thu 25 Apr 2024 05:55:58 PM UTC: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
6fb2cda
Thu 25 Apr 2024 06:03:45 PM UTC: 
 hashmap.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
52bee97
Thu 25 Apr 2024 06:07:48 PM UTC: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  5|4
total_score: 30/70
c52da7f
Thu 25 Apr 2024 06:15:21 PM UTC: 
 hashmap.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  8|3
total_score: 40/70
30198ec
Thu 25 Apr 2024 06:20:36 PM UTC: 
 hashmap.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  11|2
total_score: 50/70
4f83257
Thu 25 Apr 2024 06:45:06 PM UTC: 
 hashmap.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘firstMap’:
hashmap.c:124:10: error: expected ‘;’ before ‘}’ token
  124 |       i++
      |          ^
      |          ;
  125 |     }
      |     ~     
Compilation failed
1f69911
Thu 25 Apr 2024 06:45:12 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|2
total_score: 50/70
1c19fb6
Thu 25 Apr 2024 06:47:08 PM UTC: 
 hashmap.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  12|2
total_score: 50/70
bc45c69
Thu 25 Apr 2024 06:53:24 PM UTC: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  12|2
total_score: 50/70
2175efd
Thu 25 Apr 2024 06:54:32 PM UTC: 
 hashmap.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
 tests:  12|2
total_score: 50/70
63553f7
